--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
 </head>
 
 <body>
@@ -117,7 +118,7 @@
     </section>
 
     <section class="category">
-        <div class="container">
+        <div class="container text-center">
             <div class="row justify-content-between">
                 <div class="col-3">
                     <div class="text1">
@@ -166,7 +167,7 @@
     </section>
 
     <section class="products">
-        <div class="container">
+        <div class="container text-center">
             <div class="row justify-content-between">
                 <div class="col-3">
                     <div class="text1">
@@ -183,17 +184,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-right">
                         <div class="image">
                             <img src="./assets/image/p1.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo">26.2% OFF</span>
                                 <button>
-                                    <button>
                                     <img src="./assets/image/like1.svg" alt="">
                                 </button>
-                                </button>
                             </div>
-                            <span class="promo">26.2% OFF</span>
                         </div>
                         <span class="soft">Fruits</span>
                         <span class="bold">Blueberries (125g)</span>
@@ -211,10 +210,11 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-up">
                         <div class="image">
                             <img src="./assets/image/p2.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo" style="background-color: transparent;"></span>
                                 <button>
                                     <img src="./assets/image/like2.svg" alt="">
                                 </button>
@@ -223,8 +223,11 @@
                         <span class="soft">Vegetables</span>
                         <span class="bold">Celery (750g)</span>
                         <div class="prices">
-                            <div class="price" style="width: 90%;">
+                            <div class="price">
                                 <span>$8.75</span>
+                            </div>
+                            <div class="disc">
+                                <span></span>
                             </div>
                             <button>
                                 <img src="./assets/image/cart2-icon.svg" alt="">
@@ -233,10 +236,11 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-up">
                         <div class="image">
                             <img src="./assets/image/p3.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo" style="background-color: transparent;"></span>
                                 <button>
                                     <img src="./assets/image/like1.svg" alt="">
                                 </button>
@@ -245,8 +249,11 @@
                         <span class="soft">Fruits</span>
                         <span class="bold">Grapes (250g)</span>
                         <div class="prices">
-                            <div class="price" style="width: 90%;">
+                            <div class="price">
                                 <span>$5.15</span>
+                            </div>
+                            <div class="disc">
+                                <span></span>
                             </div>
                             <button>
                                 <img src="./assets/image/cart2-icon.svg" alt="">
@@ -255,15 +262,15 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-left">
                         <div class="image">
                             <img src="./assets/image/p4.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo">29.4% OFF</span>
                                 <button>
                                     <img src="./assets/image/like1.svg" alt="">
                                 </button>
                             </div>
-                            <span class="promo">29.4% OFF</span>
                         </div>
                         <span class="soft">Fruits</span>
                         <span class="bold">Orange - Valencia (each)</span>
@@ -285,10 +292,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-down">
                         <div class="image">
                             <img src="./assets/image/p5.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo" style="background-color: transparent;"></span>
                                 <button>
                                     <img src="./assets/image/like2.svg" alt="">
                                 </button>
@@ -297,8 +305,11 @@
                         <span class="soft">Vegetables</span>
                         <span class="bold">Onion - Red (250g)</span>
                         <div class="prices">
-                            <div class="price" style="width: 90%;">
+                            <div class="price">
                                 <span>$3.55</span>
+                            </div>
+                            <div class="disc">
+                                <span></span>
                             </div>
                             <button>
                                 <img src="./assets/image/cart2-icon.svg" alt="">
@@ -307,15 +318,15 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-down">
                         <div class="image">
                             <img src="./assets/image/p6.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo">26.2% OFF</span>
                                 <button>
                                     <img src="./assets/image/like1.svg" alt="">
                                 </button>
                             </div>
-                            <span class="promo">26.2% OFF</span>
                         </div>
                         <span class="soft">Vegetables</span>
                         <span class="bold">Melon - Watermelon (1kg ...</span>
@@ -333,10 +344,11 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-down">
                         <div class="image">
                             <img src="./assets/image/p7.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo" style="background-color: transparent;"></span>
                                 <button>
                                     <img src="./assets/image/like1.svg" alt="">
                                 </button>
@@ -345,8 +357,11 @@
                         <span class="soft">Vegetables</span>
                         <span class="bold">Potato - Sebago (500g)</span>
                         <div class="prices">
-                            <div class="price" style="width: 90%;">
+                            <div class="price">
                                 <span>$5.15</span>
+                            </div>
+                            <div class="disc">
+                                <span></span>
                             </div>
                             <button>
                                 <img src="./assets/image/cart2-icon.svg" alt="">
@@ -355,15 +370,15 @@
                     </div>
                 </div>
                 <div class="col-3">
-                    <div class="isi-product">
+                    <div class="isi-product" data-aos="fade-down">
                         <div class="image">
                             <img src="./assets/image/p8.svg" alt="">
-                            <div class="likes">
+                            <div class="add">
+                                <span class="promo">29.4% OFF</span>
                                 <button>
                                     <img src="./assets/image/like1.svg" alt="">
                                 </button>
                             </div>
-                            <span class="promo">29.4% OFF</span>
                         </div>
                         <span class="soft">Fruits</span>
                         <span class="bold">Herb - Marjoram (25g)</span>
@@ -483,7 +498,8 @@
                             </div>
                             <div class="maps">
                                 <img src="./assets/image/maps-icon.svg" alt="">
-                                <span style="margin-left: 10px;">152 Paya Lebar Road #03-03 Citipoint@PayaLebar - Singapore 409020</span>
+                                <span style="margin-left: 10px;">152 Paya Lebar Road #03-03 Citipoint@PayaLebar -
+                                    Singapore 409020</span>
                             </div>
                         </div>
                         <div class="sosmed">
@@ -547,6 +563,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
